# df-clicker

./: .gitignore  Cargo.toml  README.md  metadata.json  package-lock.json  package.json
df_clicker/: Cargo.toml
df_clicker/src/: constants.rs  lib.rs
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  utils.tsx
ui/src/components/: ClickerPluginBox.tsx  PagePluginBox.tsx
ui/src/store/: clicker.ts
