[package]
name = "df_clicker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.0" }
process_macros = { git = "https://github.com/kinode-dao/process_macros", rev = "626e501" }
dartfrog_lib = { git = "https://github.com/assemblycapital/dartfrog", package = "dartfrog_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
